[tool.poetry]
name = "depth-mapping"
version = "0.1.0"
description = "Convert 2D images to 3D with monocular depth estimation"
authors = ["Chino Franco <chino.franco@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.10.0.84"
torch = "^2.5.1"
torchvision = "^0.20.1"
open3d = "^0.19.0"
timm = "^1.0.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
